# merakl

./: Cargo.toml  README.md
src/: lib.rs  merkle_proof.rs  merkle_tree.rs  node.rs
tests/: tree.rs
