[package]
name = "merakl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
hex = { version = "0.4.3", features = ["serde"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha3 = "0.10.8"
thiserror = "1.0.51"
